--- a/Breakout-Clone.vcxproj
+++ b/Breakout-Clone.vcxproj
@@ -161,7 +161,9 @@
   <ItemGroup>
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Interactions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paddle.cpp" />
   </ItemGroup>
@@ -182,13 +184,16 @@
   <ItemGroup>
     <ClInclude Include="Background.h" />
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="Brick.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Interactions.h" />
     <ClInclude Include="Paddle.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="graphics\background.jpg" />
     <Image Include="graphics\ball.png" />
+    <Image Include="graphics\brick01.png" />
     <Image Include="graphics\paddle.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
