--- a/Breakout-Clone.vcxproj.filters
+++ b/Breakout-Clone.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="Paddle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Interactions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Brick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="openal32.dll" />
@@ -61,6 +67,12 @@
     <ClInclude Include="Paddle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Interactions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Brick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="graphics\background.jpg">
@@ -70,6 +82,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="graphics\paddle.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="graphics\brick01.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
