--- a/Breakout-Clone.vcxproj
+++ b/Breakout-Clone.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Interactions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paddle.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Interactions.h" />
     <ClInclude Include="Paddle.h" />
   </ItemGroup>
